--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <table cellspacing="20">
   <tr>
     <td>
-      <img src="upmanyu.png" width="150" height="150"/>
+      <img src="images/upmanyu.png" width="150" height="150"/>
     </td>
     <td>
       <h1><a href="https://www.linkedin.com/in/upmanyu-sharma-4a2b111b6/">UPMANYU SHARMA</a></h1>
